# sqlite3-cmake

./: .gitignore  CMakeLists.txt  NOTICE  README.md  README_CN.md
cmake/: FindSQLite3.cmake  SQLite3Config.cmake.in
